ritual history bulk update logging